fixed animation collapse menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1531,8 +1531,9 @@ margin-top: -20px;
 	display: inline-block;
 }
 .userArea .userPic img{
-	width: 90px;
-	height: 90px;
+	width: 100%;
+    height: auto;
+    vertical-align: middle;
 }
 .userArea span{
 	font: 25px 'bpg-web';
@@ -1547,25 +1548,58 @@ margin-top: -20px;
 	margin-top: 40px;
 }
 .useroabenelsparagraps .user-par {
-	height: 48px;
+	height: 28px;
     overflow: hidden;
     position: relative;
     background: #dfdfdf;
     margin-top: 10px;
 }
 .useroabenelsparagraps .user-par p{
-	width: calc(100% - 50px);
     font: 14px 'bpg-web';
     color: #616161;
-    padding: 10px;
-    line-height: 30px;
+    /*padding: 5px;*/
+    /*line-height: 30px;*/
 }
 .colapsee{
-	background:red;
+	background:#00ace0;
 	cursor: pointer;
 	position: absolute;
 	top: 0px;
 	right: 0px;
+	width: 30px;
+	height: 100%;
+}
+.bla{
+	width: calc(100% - 50px);
+    height: 28px;
+    border: 5px solid#dfdfdf;
+    overflow: hidden;
+    padding-bottom: 5px;
+}
+.colapsee .whit-dw{
+	width: 20px;
+	height: 20px;
+	background: url('../img/svg/white-down.svg')no-repeat center;
+	background-size: cover;
+	display: inline-block;
+	transform: translateY(-50%);
+	top: 50%;
+	position: absolute;
+	left: 15%;
+}
+.colapsee .whit-dw.active{
+	-webkit-transform: rotate(180deg);
+	 -moz-transform: rotate(180deg);
+	 -o-transform: rotate(180deg);
+	  transform: rotate(180deg);
+	top: 40%;
+
+}
+.transitionForClickRotate{
+	-webkit-transition-duration: 0.3s;
+	 -moz-transition-duration: 0.3s;
+	 -o-transition-duration: 0.3s;
+	  transition-duration: 0.3s;
 }
 .useroabenelsparagraps h2{
 	font: 12px 'bpg-web-001-caps';
